# embedded-rust-workshop

./: .gitignore  .gitlab-ci.yml  README.md  justfile
app/: Cargo.toml
exercise-book/: README.md  book.toml
exercise-book/src/: SUMMARY.md  accelerometer.md  blinky-exercise.md  introduction.md  multitasking-exercise.md  multitasking-ipc-exercise.md  packet-communication-serialization.md  preparation.md  terminology_glossary.md  time.md  uart-echo-exercise.md
exercise-book/src/assets/: byte-packing.drawio  packet-definition.drawio
firmware/: Cargo.toml
firmware/exercises/src/: accelerometer_solution.rs  accelerometer_step3.rs  accelerometer_step4.rs  accelerometer_step5.rs  lib.rs
host/: .gitignore  Cargo.toml
host-client/: Cargo.toml
host-client/src/: lib.rs
host/client/: Cargo.toml
host/client-solution/: Cargo.toml  config.toml.template
host/client-solution/src/: main.rs
host/client/src/: lib.rs  main.rs
host/microbit-models-solution/: Cargo.toml
host/microbit-models-solution/src/: lib.rs  response.rs
microbit-code/: rust-toolchain.toml
microbit-code/exercises/.cargo/: config.toml
microbit-code/exercises/src/: lib.rs
microbit-exercises/: Cargo.toml
microbit-exercises/src/: accelerometer_solution.rs  accelerometer_step3.rs  accelerometer_step4.rs  board.rs  led.rs  lib.rs
slides/: embedded-rust-workshop.odp
